# vara

./: .gitignore  README.md  index.html  next.config.js  package-lock.json  package.json  rome.json  tsconfig.json  vite.config.ts
.devcontainer/: Dockerfile  devcontainer.json  docker-compose.yml  template.env
app/: globals.css  layout.tsx  page.module.scss  page.tsx  (+1 more)
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/icons/: icon.icns
src-tauri/src/: cmd.rs  controller.rs  dependency_injection.rs  infra.rs  main.rs  models.rs  services.rs
src-tauri/src/infra/: pre_game_repository.rs  result_repositry_impl.rs
src-tauri/src/models/: common.rs  player.rs  pre_game.rs  result.rs  team.rs
src-tauri/src/models/common/: errors.rs  value_objects.rs
src-tauri/src/models/common/errors/: d_score_error.rs  dharma_error.rs
src-tauri/src/models/common/value_objects/: game_id.rs  player_height.rs  player_id.rs  player_name.rs  player_number.rs  player_role.rs  player_status.rs  player_weight.rs  raid_scenario.rs  score.rs  team_id.rs  team_name.rs
src-tauri/src/models/player/: player_entity.rs  player_repository_trait.rs
src-tauri/src/models/pre_game/: pre_game_entity.rs  pre_game_repository_trait.rs
src-tauri/src/models/result/: result_entity.rs  result_repository_trait.rs
src-tauri/src/models/team/: team_entity.rs  team_repository.rs
src-tauri/src/services/: payload.rs  usecases.rs
src-tauri/src/services/payload/: pre_game_payload.rs  result_payload.rs  score_payload.rs
src-tauri/src/services/usecases/: fetch_results.rs  register_pre_game_usecase.rs
(+35 files in other folders)
