[package]
name = "d_score"
version = "0.1.0"
description = "Kabaddi Scorer"
authors = ["tokunaga"]
license = ""
repository = ""
default-run = "d_score"
edition = "2021"
rust-version = "1.56"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[build-dependencies]
tauri-build = { version = "1.2.1", features = [] }

[dependencies]
serde = { version = "^1.0", features = ["derive"] }
serde_json = "^1.0"
tauri = { version = "1.2.4", features = ["api-all"] }
validator = { version = "0.16", features = ["derive"] }
anyhow = "1.0.70"
async-trait = "0.1.68"
rusqlite = {version= "*", features= ["bundled"] }
regex = "1.7.3"
thiserror = "1.0.38"
ulid = "1"
chrono = { version = "^0.4", features = ["serde"] }
futures = "*"
more-di = "*"
tauri-plugin-window-state = { git = "https://github.com/tauri-apps/plugins-workspace", branch = "dev" }

[features]
# by default Tauri runs in production mode
# when `tauri dev` runs it is executed with `cargo run --no-default-features` if `devPath` is an URL
default = [ "custom-protocol" ]
# this feature is used for production builds where `devPath` points to the filesystem
# DO NOT remove this
custom-protocol = [ "tauri/custom-protocol" ]
